Oppdater så autotest kjører på java 25